--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
         "cookies-js": "~1.1.0",
         "crypto-js": "3.1.6",
         "pako": "~0.2.8",
-        "client-line-navigator": "git://github.com/anpur/client-line-navigator"
+        "client-line-navigator": "git://github.com/anpur/client-line-navigator",
+        "file-saver.js": "~1.20150507.2"
     }
 }
