--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "stevia-components",
+    "name": "stevia-elements",
     "version": "0.1.0",
     "description": "",
     "repository": {
