Added namespace 'stv' to Stevia

--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "client-line-navigator": "git://github.com/anpur/client-line-navigator",
     "file-saver.js": "~1.20150507.2",
     "iron-component-page": "PolymerElements/iron-component-page#^1.1.5",
-    "web-component-tester": "Polymer/web-component-tester#^4.2.2"
+    "web-component-tester": "Polymer/web-component-tester#^4.2.2",
+    "iron-overlay-behavior": "^1.8.3"
   }
 }
