--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "cookies-js": "~1.1.0",
     "crypto-js": "3.1.6",
     "pako": "~0.2.8",
-    "client-line-navigator": "git://github.com/anpur/client-line-navigator",
+    "line-navigator": "git://github.com/anpur/line-navigator",
     "file-saver.js": "~1.20150507.2",
     "iron-component-page": "PolymerElements/iron-component-page#^1.1.5",
     "web-component-tester": "Polymer/web-component-tester#^4.2.2",
