--- a/bower.json
+++ b/bower.json
@@ -23,8 +23,8 @@
         "cookies-js": "~1.1.0",
         "crypto-js": "3.1.6",
         "pako": "~0.2.8",
-        "line-navigator": "https://github.com/anpur/line-navigator",
-        "FileSaver.js": "https://github.com/eligrey/FileSaver.js",
+        "line-navigator": "git://github.com/anpur/line-navigator",
+        "FileSaver.js": "git://github.com/eligrey/FileSaver.js#1.3.3",
         "iron-component-page": "PolymerElements/iron-component-page#^1.1.5",
         "web-component-tester": "Polymer/web-component-tester#^4.2.2"
     }
