--- a/bower.json
+++ b/bower.json
@@ -15,9 +15,11 @@
         "tests"
     ],
     "dependencies": {
-        "polymer": "Polymer/polymer#^1.6.0",
+        "polymer": "Polymer/polymer#^1.7.0",
         "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
-        "iron-overlay-behavior": "^1.8.3",
+        "iron-list": "^1.3.12",
+        "fontawesome": "*",
+        "iron-overlay-behavior": "^1.10.1",
         "iron-resizable-behavior": "^1.0.5",
         "fontawesome": "*",
         "cookies-js": "~1.1.0",
