package.json updated.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
     "name": "stevia-elements",
-    "version": "0.1.0",
     "description": "",
+    "version": "0.1.0",
+    "license": "GPL-3.0",
+    "contributors": [
+        "Francisco Salavert Torres <frasator@gmail.com>",
+        "Alejandro Alemán Ramos",
+    ],
     "repository": {
         "type": "git",
-        "url": ""
+        "url": "https://github.com/frasator/stevia-elements.git"
     }
 }
