--- a/bower.json
+++ b/bower.json
@@ -1,32 +1,26 @@
 {
-  "name": "stevia-elements",
-  "version": "0.1.0",
-  "homepage": "",
-  "authors": [
-    "user <user@domain.com>"
-  ],
-  "license": "GPL-3.0",
-  "private": true,
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "polymer": "Polymer/polymer#^1.8.1",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.2",
-    "iron-list": "^1.4.4",
-    "fontawesome": "*",
-    "iron-overlay-behavior": "^1.10.3",
-    "iron-resizable-behavior": "^1.0.5",
-    "cookies-js": "~1.1.0",
-    "crypto-js": "3.1.6",
-    "pako": "~0.2.8",
-    "line-navigator": "git://github.com/anpur/line-navigator",
-    "FileSaver.js": "git://github.com/eligrey/FileSaver.js#1.3.3",
-    "iron-component-page": "PolymerElements/iron-component-page#^1.1.5",
-    "async": "^2.1.2"
-  }
+    "name": "stevia-elements",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests"
+    ],
+    "dependencies": {
+        "polymer": "Polymer/polymer#^1.8.1",
+        "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.2",
+        "iron-list": "^1.4.4",
+        "fontawesome": "*",
+        "iron-overlay-behavior": "^1.10.3",
+        "iron-resizable-behavior": "^1.0.5",
+        "cookies-js": "~1.1.0",
+        "crypto-js": "3.1.6",
+        "pako": "~0.2.8",
+        "line-navigator": "git://github.com/anpur/line-navigator",
+        "FileSaver.js": "git://github.com/eligrey/FileSaver.js#1.3.3",
+        "iron-component-page": "PolymerElements/iron-component-page#^1.1.8",
+        "async": "^2.1.2"
+    },
+    "private": true
 }
