package.json fix.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "license": "GPL-3.0",
     "contributors": [
         "Francisco Salavert Torres <frasator@gmail.com>",
-        "Alejandro Alemán Ramos",
+        "Alejandro Alemán Ramos"
     ],
     "repository": {
         "type": "git",
